AM_CFLAGS = --pedantic -Wall -O2
AM_LDFLAGS =

SUBDIRS = src

#from Oren Ben-Kiki's example of doxygen integration with autotools
#include aminclude.am

#if DX_COND_man

# You'd probably want to post-process man pages and installed the patched
# versions.
#dist_man1_MANS = @DX_DOCDIR@/man/man3/net.3

#$(dist_man1_MANS): doxygen-doc

#endif


	
