AM_CFLAGS = -std=cpp98
AM_CXXFLAGS=$(CFLAGS) -Wall
include_HEADERS = libaeon.h


lib_LIBRARIES = libaeon.a
#lib_LTLIBRARIES = libaeon.la
libaeon_a_SOURCES = libaeon.cpp CSocket.cpp CEventSocket.cpp CSocketUDP.cpp CClientSocket.cpp CServerSocket.cpp CSocketSet.cpp CEventSocketSet.cpp libaeon.h 
#libaeon_la_SOURCES = libaeon.cpp CSocket.cpp CEventSocket.cpp CSocketUDP.cpp CClientSocket.cpp CServerSocket.cpp CSocketSet.cpp CEventSocketSet.cpp libaeon.h 